test/src/e2e_vm_tests/test_programs/should_fail/missing_associated_fn_arguments/src/main.sw
library;

struct Data { }

impl Data {
    fn add_values(self, _other: Data) -> u64 {
        0
    }
}

pub fn main() -> u64 {
    let data1 = Data { };
    Data::add_values(data1)
}